experiment/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: prometheus-dashboard
 namespace: monitoring
 annotations:
   kubernetes.io/ingress.class: traefik
   traefik.ingress.kubernetes.io/auth-type: "basic"
   traefik.ingress.kubernetes.io/auth-secret: "mysecret"
spec:
 rules:
 - host: prometheus.brodul.org
   http:
     paths:
     - backend:
         serviceName: prometheus
         servicePort: 9090
